--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+/* Teal :#4CA7C0
+Purple: #484FB7
+Lavender: #6B8FE7
+Yellow: #E9BB57; 
+Pink:#D9526F;
+Dark-gray:#1E1E1E; 
+White:#ffffff; */
+
 /* -------------------- CSS BY NAME -------------------------------------- */
 
 /* -------------------- IMPORTED FONTS -------------------------------------- */
@@ -8,6 +16,33 @@
 h1, h2 {
     font-family: kavoon;
 }
+
+html {
+    font-family: "inter", Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    font-size: 3em;
+}
+
+h2 > nav {
+    font-size: 1.5em;
+}
+
+h2 {
+    font-size: 2em;
+}
+
+h3 {
+    font-size: 1.5em;
+}
+
+h4 {
+    font-size: 1.14em;
+}
+
+
+
 
 /* --------------------GLOBAL STYLES (mobile first/small) --------------------*/
 
