--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ White:#ffffff; */
 
 /* -------------------- ROOT VARIABLES --------------------------------------- */
 h1, h2 {
-    font-family: kavoon;
+    font-family: "Kavoon", Arial, Helvetica, sans-serif;
 }
 
 html {
