--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
-/* Teal :#4CA7C0
+/*
+COLORS
+ Teal :#4CA7C0
 Purple: #484FB7
 Lavender: #6B8FE7
 Yellow: #E9BB57; 
 Pink:#D9526F;
 Dark-gray:#1E1E1E; 
-White:#ffffff; */
+White:#ffffff; 
+*/
 
 /* -------------------- CSS BY NAME -------------------------------------- */
 
@@ -18,7 +21,7 @@ h1, h2 {
 }
 
 html {
-    font-family: "inter", Arial, Helvetica, sans-serif;
+    font-family: "Inter", Arial, Helvetica, sans-serif;
 }
 
 h1 {
