--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,9 @@ White:#ffffff;
 */
 
 /* -------------------- CSS BY NAME -------------------------------------- */
-
+.ourServices {
+    background-color: #ffffff;
+}
 /* -------------------- IMPORTED FONTS -------------------------------------- */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kavoon&display=swap');
 /*-------------------- CSS RESET ---------------------------------------------------*/
@@ -31,6 +33,8 @@ html {
 h1 {
     font-size: 3em;
     background-color: #6B8FE7;
+    text-align: center;
+    
 }
 
 h2 > nav {
@@ -48,6 +52,7 @@ h3 {
 
 h4 {
     font-size: 1.14em;
+    color: #6B8FE7;
 }
 
 
