--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ Dark-gray:#1E1E1E;
 White:#ffffff; 
 */
 
-/* -------------------- CSS BY NAME -------------------------------------- */
+/* -------------------- CSS BY NAME -------------------------------------- 
 .ourServices {
     background-color: #ffffff;
 }
@@ -34,7 +34,7 @@ h1 {
     font-size: 3em;
     background-color: #6B8FE7;
     text-align: center;
-    
+
 }
 
 h2 > nav {
@@ -56,7 +56,10 @@ h4 {
 }
 
 
-
+/* -------------------- CSS BY NAME -------------------------------------- */
+.ourServices {
+    background-color: #ffffff;
+}
 
 /* --------------------GLOBAL STYLES (mobile first/small) --------------------*/
 
