--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ White:#ffffff;
 */
 
 /* -------------------- CSS BY NAME -------------------------------------- */
-.ourServices {
+.personalDevelopment, .careerCoaching, .relationshipCoaching {
     background-color: #ffffff;
 }
 
