--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,18 @@ White:#ffffff;
 */
 
 /* -------------------- CSS BY NAME -------------------------------------- */
+.ourServices {
+    padding: 50px;
+}
 .personalDevelopment, .careerCoaching, .relationshipCoaching {
     background-color: #ffffff;
+    max-width: 80%;
 }
 
 .whyChoose {
     background-color: #D9526F;
 }
+
 /* -------------------- IMPORTED FONTS -------------------------------------- */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kavoon&display=swap');
 /*-------------------- CSS RESET ---------------------------------------------------*/
