--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ White:#ffffff;
 
 .whyChoose {
     background-color: #D9526F;
+    text-decoration-line: none;
+    text-decoration: none;
 }
 .one {
     background-color: #4CA7C0;
