--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ White:#ffffff;
     background-color: #ffffff;
 }
 
+
 /* -------------------- IMPORTED FONTS -------------------------------------- */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kavoon&display=swap');
 /*-------------------- CSS RESET ---------------------------------------------------*/
@@ -76,7 +77,14 @@ h4 {
     color: #6B8FE7;
 }
 
+a {
+    text-decoration: none;
+    
+}
 
+th {
+    background-color: #E9BB57;
+}
 
 
 /* --------------------GLOBAL STYLES (mobile first/small) --------------------*/
