--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ a {
 .ourServices {
     padding-bottom: 50px;
 }
-.personalDevelopment, .careerCoaching, .relationshipCoaching {
+.personalDevelopment, .careerCoaching, .relationshipCoaching, .supportiveCoaching, .focusedSessions, .interactiveLearning, .flexibleLearning {
     background-color: #ffffff;
 }
 
