--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ a {
 .personalDevelopment, .careerCoaching, .relationshipCoaching, .supportiveCoaching, .focusedSessions, .interactiveLearning, .flexibleLearning {
     background-color: #ffffff;
     border-radius: 20px;
+    margin: 30px;
     padding: 20px;
 }
 
