--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,9 @@ a {
     background-color: #ffffff;
 }
 
+.table tr {
+    padding: 20px;
+}
 
 
 /* --------------------GLOBAL STYLES (mobile first/small) --------------------*/
