--- a/styles.css
+++ b/styles.css
@@ -97,12 +97,12 @@ a {
 
 .table td {
     background-color: #ffffff;
-}
-
-.table tr {
     padding: 20px;
 }
 
+.firstSteps p {
+    color: #ffffff;
+}
 
 /* --------------------GLOBAL STYLES (mobile first/small) --------------------*/
 
