--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,9 @@ a {
 
 .whyChoose, .firstSteps {
     background-color: #D9526F;
-    text-decoration: none;
+    text-decoration-style: none;
+    text-decoration-line: none;
+    text-decoration-color: #000000;
 }
 .whyChoose > li {
     list-style-type: none;
