--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@ h1 {
     font-size: 3em;
     background-color: #6B8FE7;
     text-align: center;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 
 }
 
